<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.the_c.ddcharacterapp.MainActivityFragment"
    tools:showIn="@layout/activity_main">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_gravity="top">
        <EditText
            android:hint="@string/cNameDefault"
            android:textAlignment="center"
            android:maxLines="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:id="@+id/cName" />
        <EditText
            android:hint="@string/cLvlDefault"
            android:inputType="number"
            android:textAlignment="center"
            android:maxLines="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/cLevel" />
        <EditText
            android:hint="@string/cClassDefault"
            android:textAlignment="center"
            android:maxLines="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:id="@+id/cClass" />
        <EditText
            android:hint="@string/cBackDefault"
            android:textAlignment="center"
            android:maxLines="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:id="@+id/cBackground" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <EditText
            android:hint="@string/cRaceDefault"
            android:maxLines="2"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/cRace" />
        <EditText
            android:hint="@string/cAlignDefault"
            android:textAlignment="center"
            android:maxLines="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/cAlignment" />
        <EditText
            android:hint="@string/cExpDefault"
            android:inputType="number"
            android:textAlignment="center"
            android:maxLines="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/cExp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/prevButt"
            android:text="@string/prevBut"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:background="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:layout_weight=".75"
            android:id="@+id/rollLabel"
            android:text="@string/cRollDefault"
            android:textColor="@color/contrastText"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/nextButt"
            android:text="@string/nextBut"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/diceButt"
            android:text="@string/diceBut"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"/>
        <Button
            android:id="@+id/mainButt"
            android:text="@string/mainBut"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/spellButt"
            android:text="@string/spellBut"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"/>
    </LinearLayout>
</LinearLayout>
