<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/saveDCLabel"
            android:text="@string/saveDC"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/attackBonusLabel"
            android:text="@string/attackBonus"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/castingStatLabel"
            android:text="@string/castingStat"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <EditText
            android:id="@+id/saveDC"
            android:hint="@string/cSaveDCDefault"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/attackBonus"
            android:hint="@string/cAttackBonusDefault"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/castingStat"
            android:hint="@string/cCastingStatDefault"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/preparedLabel"
        android:text="@string/preparedLabel"
        android:layout_width="0dp"
        android:layout_weight="8"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/clearLabelTV"
            android:text="@string/clearLabel"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:textAlignment="center"
            />
    </LinearLayout>
    <EditText
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="3"
        android:id="@+id/prepared"
        android:background="@drawable/edit_text_border"/>
    <TextView
        android:id="@+id/cantripLabel"
        android:text="@string/cantripLabel"
        android:layout_width="wrap_content"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"/>
    <EditText
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="3"
        android:id="@+id/cantrips"
        android:background="@drawable/edit_text_border"/>

    <TextView
        android:id="@+id/firstlvlLabel"
        android:text="@string/firstlvlLabel"
        android:layout_width="wrap_content"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"/>
    <EditText
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="3"
        android:id="@+id/firstlvlSpells"
        android:background="@drawable/edit_text_border"/>

    <TextView
        android:id="@+id/secondlvlLabel"
        android:text="@string/secondlvlLabel"
        android:layout_width="wrap_content"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"/>
    <EditText
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="3"
        android:id="@+id/secondlvlSpells"
        android:background="@drawable/edit_text_border"/>

    <TextView
        android:id="@+id/thirdlvlLabel"
        android:text="@string/thirdlvlLabel"
        android:layout_width="wrap_content"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"/>
    <EditText
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="3"
        android:id="@+id/thirdlvlSpells"
        android:background="@drawable/edit_text_border"/>

    <TextView
        android:id="@+id/fourthlvlLabel"
        android:text="@string/fourthlvlLabel"
        android:layout_width="wrap_content"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"/>
    <EditText
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="3"
        android:id="@+id/fourthlvlSpells"
        android:background="@drawable/edit_text_border"/>

    <TextView
        android:id="@+id/fifthlvlLabel"
        android:text="@string/fifthlvlLabel"
        android:layout_width="wrap_content"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"/>
    <EditText
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="3"
        android:id="@+id/fifthlvlSpells"
        android:background="@drawable/edit_text_border"/>

    <TextView
        android:id="@+id/sixthlvlLabel"
        android:text="@string/sixthlvlLabel"
        android:layout_width="wrap_content"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"/>
    <EditText
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="3"
        android:id="@+id/sixthlvlSpells"
        android:background="@drawable/edit_text_border"/>

    <TextView
        android:id="@+id/seventhlvlLabel"
        android:text="@string/seventhlvlLabel"
        android:layout_width="wrap_content"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"/>
    <EditText
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="3"
        android:id="@+id/seventhlvlSpells"
        android:background="@drawable/edit_text_border"/>

    <TextView
        android:id="@+id/eighthlvlLabel"
        android:text="@string/eigthlvlLabel"
        android:layout_width="wrap_content"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"/>
    <EditText
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="3"
        android:id="@+id/eighthlvlSpells"
        android:background="@drawable/edit_text_border"/>

    <TextView
        android:id="@+id/ninthlvlLabel"
        android:text="@string/ninthlvlLabel"
        android:layout_width="wrap_content"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"/>
    <EditText
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="3"
        android:id="@+id/ninthlvlSpells"
        android:background="@drawable/edit_text_border"/>

</LinearLayout>